# spark-databricks

./: README.md  pyproject.toml  requirements.txt
examples/: 1_volatility_and_CPU_bound_pipeline_example.ipynb  2_seasonality_and_IO_bound_process.ipynb  ohlcv_jobs.ipynb  seasonality_jobs.ipynb  volatility_jobs.ipynb
examples/.ipynb_checkpoints/: 1_volatility_and_CPU_bound_pipeline_example-checkpoint.ipynb  2_seasonality_and_IO_bound_process-checkpoint.ipynb  ohlcv_jobs-checkpoint.ipynb  seasonality_jobs-checkpoint.ipynb  volatility_jobs-checkpoint.ipynb
propdesk_estimators/: data_extraction.py  data_raw_transformation.py  data_upload.py  databricks_deploy.py  estimators.py  exchange_storage.py  run_ohlcv.py  run_seasonality.py  run_test  run_volatility_zma.py  utils.py
spark_jobs/: spark_schedule_handler.py
spark_jobs/.ipynb_checkpoints/: spark_ohlcv-checkpoint.py  spark_seasonality-checkpoint.py  spark_volatility_zma-checkpoint.py
tests/.ipynb_checkpoints/: estimators_unittest-checkpoint.py
